[package]
name = "systems"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[tasks.format]
install_crate = "rustfmt"
command = "cargo"
args = ["fmt", "--", "--emit=files"]

[tasks.clean]
command = "cargo"
args = ["clean"]

[tasks.build]
command = "cargo"
args = ["build"]
dependencies = ["clean"]

[tasks.test]
command = "cargo"
args = ["test"]
dependencies = ["clean"]

[tasks.ci]
dependencies = [
    "format",
    "build",
    "test"
]

[dependencies]
actix-web = "3.3.2"
dotenv = "0.15.0"
jsonwebtoken = "7.2.0"
serde = {version = "1.0.130", features = ["derive"] }
simple-error = "0.2.3"

[dev-dependencies]
