[package]
name = "auth"
version = "0.1.0"
authors = ["Joshua <jschmidtnj@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.7"
#jwt-simple = "0.10.7"
jwt-simple = { git = "https://github.com/jschmidtnj/rust-jwt-simple" }
chrono = "0.4"
http = "0.2.5"
getrandom = { version = "0.2", features = ["js"] }
nanoid = "0.4.0"
cookie = "0.15"
serde = { version = "1.0.130", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde_json = "1.0.67"
instant = { version = "0.1", features = ["wasm-bindgen", "inaccurate"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
#console_error_panic_hook = { version = "0.1.1", optional = true }

#[features]
#default = ["console_error_panic_hook"]

#[patch.crates-io]
#instant = {  }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
