[package]
name = "ipfs-auth-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.12"
actix-cors = "0.6.0-beta.4"
dotenv = "0.15"
http = "0.2"
openssl = {version = "0.10", features = ["vendored"]}
regex = "1"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
