[package]
name = "ipfs-auth-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.12"
actix-cors = "0.6.0-beta.4"
argon2 = "0.3"
chrono = "0.4"
dotenv = "0.15"
http = "0.2"
jsonwebtoken = "7.2"
nanoid = "0.4"
openssl = {version = "0.10", features = ["vendored"]}
rand_core = { version = "0.6", features = ["std"] }
r2d2_redis = "0.14"
redis = "0.21"
regex = "1.5"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.12", features = ["derive"] }

[dev-dependencies]
